<resources>
    <string name="app_name" translatable="false">Activity Sync</string>
    <string name="btn_open_intro_screen">Open Future Intro</string>
    <string name="btn_display_test_message">Display test message</string>
    <string name="btn_show_progress">Show progress</string>
    <string name="btn_hide_progress">Hide progress</string>
    <string name="txt_hello_message">Hi stranger! This app will be awesome!</string>
    <string name="title_dummy_screen">Dummy Screen</string>
    <string name="txt_intro_easy_organizing">Organizing sport events\nnever have been easier before!</string>
    <string name="txt_intro_happy">Thank you for installing our app\nWe are happy to meet you!</string>
    <string name="txt_intro_friends">Participate in various types of\nevents and meet new friends!</string>
    <string name="txt_intro_last_screen">You are all set up now\nLet\'s get started!</string>
    <string name="txt_intro_locations">In order to use ActivitySync\nwith no limit we would like to\nuse your current location.</string>
    <string name="btn_allow_now">Allow now</string>
    <string name="txt_permission_granted">Permission has been granted</string>
    <string name="txt_permission_not_granted">Permission has not been granted</string>
    <string name="menu_dummy_screen">Dummy Screen</string>
    <string name="menu_events">Events</string>
    <string name="menu_users_screen">Users</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_create_event">New event</string>
    <string name="log_out">Log out</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_my_profile">My profile</string>
    <string name="title_events">Events</string>
    <string name="tab_all_events">All events</string>
    <string name="tab_my_events">My events</string>
    <string name="txt_from_today">From today</string>
    <string name="txt_all">All</string>
    <string name="txt_filter_from" formatted="false">From %02d-%02d-%d</string>
    <string name="txt_date_server_format" translatable="false">%d-%02d-%02d 00:00:00</string>
    <string name="txt_pls_enable_locations" formatted="false">Yo have to enable location permission in order to load events near you.</string>
    <string name="btn_enable_now">ENABLE NOW</string>
    <string name="txt_wait_for_location">Please wait a moment. We are checking your localization.</string>
    <string name="btn_join_event">Join</string>
    <string name="btn_leave_event">Leave</string>
    <string name="btn_cancel_event">Cancel</string>
    <string name="title_event_details">Event details</string>
    <string name="txt_event_det_organizer">Organizer</string>
    <string name="txt_event_det_participants">Participants</string>
    <string name="txt_event_det_date">Date</string>
    <string name="txt_event_det_level">Level</string>
    <string name="txt_event_det_description">Description</string>
    <string name="txt_enroll_confirmation_text">Are you sure you want to enroll for this event?</string>
    <string name="txt_enroll_confirmation_title">Enroll event confirmation</string>
    <string name="txt_leave_confirmation_text">Are you sure you want to leave this event?</string>
    <string name="txt_leave_confirmation_title">Leave event confirmation</string>
    <string name="txt_cancel_confirmation_text">Are you sure you want to cancel this event? This operation cannot be undone.</string>
    <string name="txt_cancel_confirmation_title">Cancel event confirmation</string>
    <string name="txt_enroll_message">You have enrolled for this event</string>
    <string name="txt_leave_message">You have left this event</string>
    <string name="txt_participant">Participant</string>
    <string name="txt_enrolled">Enrolled</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_event_details_screen_comments">COMMENTS</string>
    <string name="title_user_details">User details</string>
    <string name="txt_username">Username</string>
    <string name="txt_name">Name</string>
    <string name="txt_last_name">Last name</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_credibility">Credibility</string>
    <string name="txt_votes_number">Votes</string>
    <string name="txt_very_good">Very good</string>
    <string name="txt_good">good</string>
    <string name="txt_ok">OK</string>
    <string name="txt_poor">Poor</string>
    <string name="txt_bad">Bad</string>
    <string name="txt_terrible">Terrible</string>
    <string name="txt_user_det_signature">Signature</string>
    <string name="txt_events_number">Events number</string>
    <string name="btn_add_to_friends">Add to friends</string>
    <string name="btn_cancel_friend_request">Cancel friends request</string>
    <string name="btn_remove_from_friends">Remove from your friends list</string>
    <string name="txt_friends_request_sent">Friends request has been sent</string>
    <string name="btn_reject_friends_request">Reject friend</string>
    <string name="btn_accept_friends_request">Accept friend</string>
    <string name="txt_friends_request_turned_down">Friends request has been canceled</string>
    <string name="txt_friend_removed">User deleted from your friends</string>
    <string name="txt_friend_request_rejected">You have rejected friend request</string>
    <string name="txt_friend_request_accepted">You have accepted friend request</string>
    <string name="txt_register_date">Register Date</string>
    <string name="title_participants">Participants list</string>
    <string name="txt_registered">Registered</string>
    <string name="txt_candidates">Candidates</string>
    <string name="txt_declined">Declined</string>
    <string name="txt_remove_user_confirmation_text">Are you sure you want to remove this user from the list? This operation cannot be undone.</string>
    <string name="txt_remove_user_confirmation_title">Remove user confirmation</string>
    <string name="txt_accept_user_confirmation_text">Are you sure you want to add this user?</string>
    <string name="txt_accept_user_confirmation_title">Accept request confirmation</string>
    <string name="txt_remove_success" formatted="false">%s has been removed from this list</string>
    <string name="txt_accept_success" formatted="false">%s request has been accepted</string>
    <string name="title_friends">Friends list</string>
    <string name="txt_friends_requests">Friend requests</string>
    <string name="txt_added_friends">Added friends</string>
    <string name="title_preferences">Settings</string>
    <string name="pref_cat_location">Location</string>
    <string name="pref_cat_notification">Notifications</string>
    <string name="pref_cat_search">Default search values</string>
    <string name="pref_cat_account">User account</string>
    <string name="pref_location_switch">Enable location</string>
    <string name="pref_notification_switch">Enable notifications</string>
    <string name="pref_notification_sound_chk">Notification sound</string>
    <string name="pref_notification_vibration_chk">Notification vibration</string>
    <string name="pref_search_days">Search days ahead</string>
    <string name="pref_search_range">Search range [km]</string>
    <string name="title_my_profile">My profile</string>
    <string name="my_profile_edit_account_btn">EDIT PROFILE</string>
    <string name="my_profile_change_pwd_btn">CHANGE PASSWORD</string>
    <string name="title_edit_account">Edit account</string>
    <string name="ea_hint_first_name">First Name</string>
    <string name="ea_hint_last_name">Last Name</string>
    <string name="ea_hint_email">Email</string>
    <string name="ea_hint_signature">Signature</string>
    <string name="ea_hint_password">Type password to confirm</string>
    <string name="ea_err_empty_field">This field cannot be empty</string>
    <string name="ea_save_btn">Save</string>
    <string name="ea_save_succ">Profile saved!</string>
    <string name="ea_save_fail">Profile was not saved!</string>
    <string name="title_change_password">Change Password</string>
    <string name="cp_hint_old_password">Old password</string>
    <string name="cp_hint_new_password">New password</string>
    <string name="cp_hint_confirm_new_password">Confirm new password</string>
    <string name="cp_save_btn">SAVE</string>
    <string name="cp_save_succ">Password changed!</string>
    <string name="cp_save_fail">Password was not changed!</string>
    <string name="err_confirmed_not_matching">Confirm password does not math the password</string>
    <string name="err_same_passwords">New password must be different from old password</string>
    <string name="btn_login">Login</string>
    <string name="hint_login">Login / Email</string>
    <string name="hint_password">Password</string>
    <string name="txt_no_account">No account yet? Create one</string>
    <string name="txt_already_registered">Already registered! Login me.</string>
    <string name="btn_register">Register</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_nick">Nick</string>
    <string name="err_empty_field">This field cannot be empty</string>
    <string name="txt_choose_date">Date of the event</string>
    <string name="txt_not_selected">Not selected</string>
    <string name="txt_choose_location">Location of the event</string>
    <string name="txt_discipline">Discipline</string>
    <string name="txt_level">Level</string>
    <string name="txt_number_of_players">Number of players</string>
    <string name="txt_description">Description</string>
    <string name="txt_enroll_as_a_participant">Enroll as a participant</string>
    <string name="txt_create_event">Create event</string>
    <string name="title_event_creator">Event creator</string>
    <string name="title_event_update">Updating event</string>
    <string name="date_format" translatable="false">%d-%d-%d %02d:%02d:00</string>
    <string name="txt_error_choosing_location">Location has not been chosen properly</string>
    <string name="txt_create_event_confirmation_title">Create event confirmation</string>
    <string name="txt_create_event_confirmation_text">Are you sure you want to create this event?</string>
    <string name="txt_update_event_confirmation_title">Update event confirmation</string>
    <string name="txt_update_event_confirmation_text">Are you sure you want to update this event?</string>
    <string name="btn_update_event">Update event</string>
    <string name="err_choose_address">Address has not been selected</string>
    <string name="txt_city_default">Unknown</string>
    <string name="title_comments">Comments</string>
    <string name="txt_comment_author" formatted="false">%s wrote:</string>
    <string name="err_comment_empty">Your comment cannot be empty</string>
    <string name="txt_comment_hint">Write your comment here</string>
    <string name="btn_send">Send</string>
    <string name="title_all_users">Users</string>
    <string name="hint_filter">Search by nickname...</string>
    <string name="err_authorization">Authorization error</string>
    <string name="err_permission_denied">Permission denied</string>
    <string name="err_servers_cannot_be_reached">Servers cannot be reached at the moment.</string>
    <string name="err_something_went_wrong">Something went wrong. Please try again</string>
    <string name="txt_logged_as">Logged as: %s</string>
    <string name="txt_friends_notif_title">Someone sent you friends invitation!</string>
    <string name="txt_friends_notif_content">Click here and decide to accept or reject friends invitation</string>
    <string name="txt_event_cancel_notifi_title">Event canceled :(</string>
    <string name="txt_event_cancel_notifi_content">Organizer of the event has canceled the event.</string>
    <string name="txt_event_approved_notifi_title">You have been approved!</string>
</resources>