<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_create_event"
            android:title="@string/menu_create_event"/>

        <item
            android:id="@+id/menu_events"
            android:title="@string/menu_events"/>

        <item
            android:id="@+id/menu_users"
            android:title="@string/menu_users_screen"/>

        <item
            android:id="@+id/menu_friends"
            android:title="@string/menu_friends"/>

        <item
            android:id="@+id/menu_my_profile"
            android:title="@string/menu_my_profile"/>

        <item
            android:id="@+id/menu_settings"
            android:title="@string/menu_settings"/>

        <item
            android:id="@+id/menu_logout"
            android:title="@string/log_out"/>
    </group>

</menu>
