<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigation_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/toolbar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/screen_margin"
                android:orientation="vertical"
                android:padding="@dimen/screen_margin_half"
                android:theme="@style/AppTheme.SettingsScreen">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/screen_margin_half"
                    android:text="@string/pref_cat_location"
                    android:textColor="@color/settings_accent"
                    android:textSize="@dimen/text_default_size"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/screen_margin_small"
                    android:background="@color/settings_primary"/>


                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/location_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/screen_margin_quarter"
                    android:text="@string/pref_location_switch"
                    android:textSize="@dimen/text_big_size"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/screen_margin_big"
                    android:text="@string/pref_cat_notification"
                    android:textColor="@color/settings_accent"
                    android:textSize="@dimen/text_default_size"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/screen_margin_small"
                    android:background="@color/settings_primary"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/notification_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/screen_margin_quarter"
                    android:text="@string/pref_notification_switch"
                    android:textSize="@dimen/text_big_size"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/screen_margin_quarter"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/screen_margin_quarter"
                    android:paddingRight="@dimen/screen_margin_quarter">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_weight="1"
                        android:text="@string/pref_notification_sound_chk"
                        android:textSize="@dimen/text_default_size"/>

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/notification_sound_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:layout_weight="0"
                        android:text=""/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/screen_margin_quarter"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/screen_margin_quarter"
                    android:paddingRight="@dimen/screen_margin_quarter">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_weight="1"
                        android:text="@string/pref_notification_vibration_chk"
                        android:textSize="@dimen/text_default_size"/>

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/notification_vibrate_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:layout_weight="0"
                        android:text=""/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/screen_margin_big"
                    android:text="@string/pref_cat_search"
                    android:textColor="@color/settings_accent"
                    android:textSize="@dimen/text_default_size"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/screen_margin_small"
                    android:background="@color/settings_primary"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/screen_margin_quarter"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:text="@string/pref_search_days"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_big_size"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/search_days_ahead_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:textSize="@dimen/text_default_size"
                        android:layout_weight="0"/>

                </LinearLayout>

                <android.support.v7.widget.AppCompatSeekBar
                    android:id="@+id/days_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/screen_margin_quarter"
                    android:max="150"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

    <include layout="@layout/navigation_view"/>

</android.support.v4.widget.DrawerLayout>