<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/logo"
                    android:tint="@color/white" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/screen_margin"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_first_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/screen_margin_half"
                    android:layout_weight="1"
                    app:hintTextAppearance="@style/DefaultFloatingHint">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/first_name"
                        style="@style/DefaultEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_first_name"
                        android:imeOptions="actionNext" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_last_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/screen_margin_half"
                    android:layout_weight="1"
                    app:hintTextAppearance="@style/DefaultFloatingHint">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/last_name"
                        style="@style/DefaultEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_last_name"
                        android:imeOptions="actionNext" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/DefaultFloatingHint">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/email"
                    style="@style/DefaultEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_nickname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/screen_margin_half"
                    android:layout_weight="1"
                    app:hintTextAppearance="@style/DefaultFloatingHint">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/nickname"
                        style="@style/DefaultEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_nick"
                        android:imeOptions="actionNext" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/screen_margin_half"
                    android:layout_weight="1"
                    app:hintTextAppearance="@style/DefaultFloatingHint">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/password"
                        style="@style/DefaultEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_button_height"
                android:layout_marginTop="@dimen/screen_margin_twice"
                android:background="@drawable/selector_default_positive"
                android:text="@string/btn_register"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/already_registered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/screen_margin"
                android:gravity="center"
                android:text="@string/txt_already_registered"
                android:textSize="@dimen/text_big_size" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>